# stockfit-api

./: LICENSE  README.md
node/: .gitignore  README.md  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts
node/examples/company-explorer/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
node/examples/company-explorer/app/: globals.css  layout.tsx  page.tsx
node/examples/company-explorer/app/api/company/: route.ts
node/scripts/: fetch-spec.mjs
node/src/: index.ts
python/: .gitignore  README.md  config.yaml  openapi.json  pyproject.toml
python/scripts/: fetch_spec.py
